--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com" target="_blank">CursoemVídeo</a></p>
+        <p>Site criado por <a href="https://github.com/mateusjm" target="_blank">Mateus Lucas</a>
     </footer>
 </body>
 </html>
